[project]
name = "youtube-downloader"  # Descriptive name
version = "0.1.0"
description = "A Flask-based YouTube video downloader"
authors = ["Your Name <you@example.com>"]  # Replace with your details
requires-python = ">=3.11"
dependencies = [
    "flask",
    "yt-dlp",  # Corrected from "pytube"
    # Optional: "numpy" if needed elsewhere, otherwise remove
    # "numpy",
]
